suit emojis and deck size checks

--- a/cards-config.json
+++ b/cards-config.json
@@ -2,6 +2,7 @@
   "JOKER": { "EMOJI_ID":"817419841728151573", "EMOJI_NAME": "JOKER" },
 
   "DIAMONDS": {
+    "EMOJI": ":diamonds:",
     "ACE": { "EMOJI_ID": "817059975323058186", "EMOJI_NAME": "DIAMONDS_ACE" },
     "TWO": { "EMOJI_ID": "817059790806712391", "EMOJI_NAME": "DIAMONDS_TWO" },
     "THREE": { "EMOJI_ID": "817059815309967360", "EMOJI_NAME": "DIAMONDS_THREE" },
@@ -17,6 +18,7 @@
     "KING": { "EMOJI_ID": "817060114426626048", "EMOJI_NAME": "DIAMONDS_KING" }
   },
   "CLUBS": {
+    "EMOJI": ":clubs:",
     "ACE": { "EMOJI_ID": "817059381983576116", "EMOJI_NAME": "CLUBS_ACE" },
     "TWO": { "EMOJI_ID": "817059212658999297", "EMOJI_NAME": "CLUBS_TWO" },
     "THREE": { "EMOJI_ID": "817059233782431764", "EMOJI_NAME": "CLUBS_THREE" },
@@ -32,6 +34,7 @@
     "KING": { "EMOJI_ID": "817059433980624926", "EMOJI_NAME": "CLUBS_KING" }
   },
   "HEARTS": {
+    "EMOJI": ":hearts:",
     "ACE": { "EMOJI_ID": "817060310527508492", "EMOJI_NAME": "HEARTS_ACE" },
     "TWO": { "EMOJI_ID": "817060172493094922", "EMOJI_NAME": "HEARTS_TWO" },
     "THREE": { "EMOJI_ID": "817060187118108698", "EMOJI_NAME": "HEARTS_THREE" },
@@ -47,6 +50,7 @@
     "KING": { "EMOJI_ID": "817060352034209813", "EMOJI_NAME": "HEARTS_KING" }
   },
   "SPADES": {
+    "EMOJI": ":spades:",
     "ACE": { "EMOJI_ID": "817060549606113310", "EMOJI_NAME": "SPADES_ACE" },
     "TWO": { "EMOJI_ID": "817060399802220585", "EMOJI_NAME": "SPADES_TWO" },
     "THREE": { "EMOJI_ID": "817060422829473852", "EMOJI_NAME": "SPADES_THREE" },
